# winstars-test-task

./: README.md
task1_mnist_image_classification/: .gitignore  README.md  pyproject.toml  requirements.txt
task1_mnist_image_classification/models/: cnn_model.py  ffnn_model.py  interface.py  mnist_classifier.py  rf_model.py
task1_mnist_image_classification/notebook/: demo.ipynb
task1_mnist_image_classification/utils/: mnist_loader.py
task2_animal-multimodal_classifier/: .gitignore  README.md  pipeline.py  pyproject.toml  requirements.txt
task2_animal-multimodal_classifier/data/: ner_dataset.json
task2_animal-multimodal_classifier/models/image_classification/: create_classes_json.py  img_model.py  inference_img.py  train_img.py
task2_animal-multimodal_classifier/models/ner/: generate_ner_dataset.py  inference_ner.py  ner_model.py  train_ner.py
task2_animal-multimodal_classifier/notebooks/: eda.ipynb
