[project]
name = "task1-mnist-image-classification"
version = "0.1.0"
description = "MNIST image classification using Random Forest, Feed-Forward NN and CNN"
authors = [
    {name = "Pasha0923",email = "alexsai@i.ua"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyterlab (>=4.5.6,<5.0.0)",
    "notebook (>=7.5.5,<8.0.0)"
]
