[project]
name = "task2-animal-multimodal-classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Pasha0923",email = "alexsai@i.ua"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy (>=2.4.3,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

